test/users/vass/compilerAssert/compilerAssert2d.good
compilerAssert2d.chpl:2: error: assert failed - m1m2
