test/users/vass/compilerAssert/compilerAssert2d.chpl

compilerAssert(false, "m1", "m2");
